src/services/phippy-api-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phippy-api
spec:
  selector:
    app.kubernetes.io/name: phippy
    app.kubernetes.io/component: api
  ports:
  - name: http
    port: 80
    targetPort: 5000
