src/services/phippy-db-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phippy-db
spec:
  selector:
    app.kubernetes.io/name: phippy
    app.kubernetes.io/component: db
  ports:
  - name: redis
    port: 6379
    targetPort: 6379
