src/services/phippy-ui-svc-ext.yaml
apiVersion: v1
kind: Service
metadata:
  name: phippy-ui-ext
spec:
  selector:
    app.kubernetes.io/name: phippy
    app.kubernetes.io/component: ui
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 5000
    nodePort: 301dd
