src/services/phippy-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: phippy-ui
spec:
  selector:
    app.kubernetes.io/name: phippy
    app.kubernetes.io/component: ui
  ports:
  - name: http
    port: 80
    targetPort: 5000
