src/services/my-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  namespace: lab-services
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
   - host: myapp.clusterx.qedzone.ro
     http:
      paths:
      - path: /foo
        backend:
          serviceName: my-internal-service
          servicePort: 80
