src/services/phippy-ui-httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: phippy-ui
spec:
  parentRefs:
  - name: envoy-gateway
    namespace: envoy-gateway
  hostnames:
  - phippy.clusterx.qedzone.ro
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: phippy-ui
      port: 80
