src/services/phippy-ui-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: phippy-ui
spec:
  rules:
  - host: phippy.clusterx.qedzone.ro
    http:
      paths:
      - path: /
        pathType: "Prefix"
        backend:
          service:
            name: phippy-ui
            port:
              name: http
